Solutions for tutorial

--- a/notes.org
+++ b/notes.org
@@ -3973,6 +3973,37 @@
 
     $x^t M x$ will turn out to be $6x_1 -12x_2 + 6x_3$. Now, $(1, 0, 0)$ will be
     a good strategy for A. So A should accept it.
+*** Problem 3
+    Rotate and translate the plane. Consider pair of discs so that the distance
+    between the centres are maximal.
+
+    The property about two disc intersecting is same as that the centres are
+    less than or equal to $2$.
+
+    Now we can reduce it into the hint. 
+
+    Turns out that we can improve the bound to $3$. The example is not easy.
+
+    *Bonus* Prove some upper bound for the general problem. Prove the bound of
+     seven.
+*** Problem 4
+    1. For $n =1$ it's trivial. Assume it's true for $\le n- 1$. Write $f$ in
+       terms of the variable $x_n$. Write $f = \sum_{i = 0}^{d} g_i(x_1, \cdots,
+       x_{n-1}) x_n^i$. Let $Z = \{(r_1, \cdots, r_n) \in S^n \vert f(r_1,
+       \cdots, r_n) \neq 0\}$. $Z_1 = \{(r_1, \cdots, r_n) \in Z \vert
+       g_d_n(r_1, \cdots, r_{n-1}) \neq 0\} \subset Z$
+
+       By inductive hypothesis $g_{d_n}$ has $\ge \prod_{i=1}^{n-1} (\vert S
+       \vert - d_i)$ non-zeros in $S^{n-1}$.
+
+       fix some $(r_1, \cdots, r_{n-1})$. Then $f'(x_n) = f(r, \cdots, r_{n-1},
+       x_n)$ is a polynomial in $x_n$ of degree $=d_n$. Implies $f'(x_n) \le
+       d_n$ zeros and hence $\ge \vert S \vert - d_n$ nonzeros in $S$.
+    2. $f(x_1, x_2) = x_1x_2$ and $S = (0, 1)$ and $d = 2$, $d_1 = d_2 = 1$,
+       $d\vert S \vert^{n-1} = 4$. Thus $\vert S \vert^n - \Prod (\vert S
+       \vert - d_i) =3$.
+    3. $f = x_1^2 + x_2^2 - 5$ and $S = \{\pm 1, \pm 2\}$. Then we have $2 \cdot
+       2^2$ zeros. Somehow it works.
 *** Problem 5
     I only verified the first one. I hope the rest is true.
 
@@ -3980,10 +4011,12 @@
     operations. Then there are a total of $18$ addition and $7$ multiplications
     of size $T(k-1)$.
 
-    $T(k) = 7T(k-1) + 18 2^{k-1}$ and $T(0) = 1$.
+    $T(k) = 7T(k-1) + 18 2^{2k-2}$ and $T(0) = 1$.
 
-    Now, $T(k) = 7^k + 18/13 (14^k - 1)$.
+    Now, $T(k) = 7^k \cdot\frac{10}{4} - 6 \cdot 4^k$
 
+    This is better than $8^k$.
+    
     For general matrices, we can make it a matrix on $2^k$ by padding it with
     zeros. It is similar to how we compute the complexity of the merge sort.
 * Footnotes
